# OrcaCode

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  baseline_report.txt  box.json  build_exe.py  orca.bat  orca.py  package.bat  push_to_git.bat  pyproject.toml  requirements.txt  scratch_find.py  setup.bat  test_telex2.py  test_telex3.py  ui_design_rules.md
.github/workflows/: ci.yml
.orca/: CHANGELOG.md  INDEX.md  README_UI_SYSTEM.md  REFACTOR_SUMMARY.md  UI_SYSTEM_DIAGRAM.md  UI_SYSTEM_SUMMARY.md  design_system.md  ideas_proposal.md  instructions.md  project_blueprint.md  project_map.json  project_stack.md  runtime_contract.md  ui_runtime_rules.md
.orca/animation/: performance.md  rules.md
.orca/baseline/: baseline.json
.orca/components/: examples.md  patterns.md
.orca/core/: philosophy.md  workflow.md
.orca/design/: colors.md  spacing.md  styles.md  typography.md
.orca/qa/: checklist.md
.orca/reference/: getdesign.md  libraries.md  resources.md
.orca/skills/: getdesign_reference.md  ui_design.md  (+2 more)
config/: settings.py
core/: __init__.py  agent.py  agent_tools.py  agent_utils.py  commands.py  constants.py  diagnostic_mixin.py  git_repo.py  memory_manager.py  models.py  pricing.py  summarizer.py  tui.py  ui.py
scripts/: bench_baseline.py
tests/: _debug_fts.py  _debug_modal.py  test_agent_conversation.py  test_agent_loop.py  test_arch_graph.py  test_blueprint.py  test_checkpoint.py  test_cli.py  test_context.py  test_enforce_patch.py  test_error_pipeline.py  test_file_backup.py  test_final.py  test_imports.py  test_integration.py  test_long_memory.py  test_patcher.py  test_path_traversal.py  test_pricing.py  test_security.py  test_services.py  test_structural_validator.py  test_structured_patch.py  test_subagent_contract.py  test_syntax.py  test_tui.py  test_verify_all_layers.py
utils/: __init__.py  diff.py  normalize.py  tokenizer.py
(+117 files in other folders)
