[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orcacode"
version = "0.2.0"
description = "OrcaCode - Terminal AI Agent"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "OrcaCode Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "textual>=0.50.0",
    "Pillow>=10.0.0",
]

[project.scripts]
orca = "orca:main"

[tool.setuptools]
packages = ["core", "config", "utils", "core.llm", "core.prompts", "core.services", "core.viewmodels"]
py-modules = ["orca"]
package-data = { "core" = ["assets/js/*.js"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["vendor", "aider-main", "node_modules", ".git", "__pycache__"]
filterwarnings = ["ignore::pytest.PytestUnknownMarkWarning"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 140

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (intentionally relaxed)
    "F401",  # unused import (many deferred)
    "F403",  # star imports
    "F405",  # star import usage
    "E402",  # module level import not at top
    "E731",  # lambda assignment
    "N802",  # function name should be lowercase
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "C901",  # too complex
    "W291",  # trailing whitespace
    "E722",  # bare except (intentional in many places)
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ALL"]
"vendor/*" = ["ALL"]
